fix: button small size

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -7,7 +7,8 @@
   font-weight: 500;
   transition-duration: 0.5s;
   cursor: pointer;
-  max-width: 20rem;
+  width: max-content;
+  white-space: nowrap;
   &--primary {
     background-color: var(--color-primary);
     color: var(--color-white);
